[package]
name = "alloy-mev"
version = "0.5.0"
authors = ["leruaa"]
license = "MIT"
edition = "2021"
readme = "./README.md"
documentation = "https://docs.rs/alloy-mev"
repository = "https://github.com/leruaa/alloy-mev"
homepage = "https://github.com/leruaa/alloy-mev"
description = """
Easily send transaction bundles using Alloy.
"""

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest", "dep:serde_json", "dep:tower"]

[dependencies]
alloy = { version = "1.0.30", features = [
    "rpc",
    "rpc-client",
    "rpc-types-mev",
    "json-rpc",
    "network",
    "providers",
    "provider-mev-api",
    "transports",
    "transport-http",
    "signers",
] }
tower = { version = "0.5", optional = true }
futures = "0.3"
pin-project = "1.1"
reqwest = { version = "0.12", optional = true }
url = "2.5"
serde_json = { version = "1.0", optional = true }
async-trait = "0.1"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
alloy = { version = "1.0.30", features = [
    "rpc-client",
    "consensus",
    "signer-local",
] }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]


[[example]]
name = "mev_share"
doc-scrape-examples = true
required-features = ["reqwest"]

[[example]]
name = "send_to_builders"
doc-scrape-examples = true
required-features = ["reqwest"]
