[package]
name = "alloy-mev"
version = "0.5.0"
authors = ["leruaa"]
license = "MIT"
edition = "2021"
readme = "./README.md"
documentation = "https://docs.rs/alloy-mev"
repository = "https://github.com/leruaa/alloy-mev"
homepage = "https://github.com/leruaa/alloy-mev"
description = """
Easily send transaction bundles using Alloy.
"""

[dependencies]
alloy = { version = "1.0.30", features = [
    "rpc",
    "rpc-client",
    "rpc-types-mev",
    "json-rpc",
    "network",
    "providers",
    "provider-mev-api",
    "transports",
    "transport-http",
    "signers",
] }
futures = "0.3"
pin-project = "1.1"
url = "2.5"
async-trait = "0.1"
dyn-clone = "1.0.20"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
alloy = { version = "1.0.30", features = [
    "rpc-client",
    "consensus",
    "signer-local",
] }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]


[[example]]
name = "mev_share"
doc-scrape-examples = true
required-features = ["reqwest"]

[[example]]
name = "send_to_builders"
doc-scrape-examples = true
required-features = ["reqwest"]
